GNOME Bugzilla – Bug 678680
Fails to create GPG key
Last modified: 2012-06-29 08:06:02 UTC
Created attachment 217094 [details] Debian-generated software info I tried to create a new 4096-bit GPG key using seahorse, and it simply sat there with the progress indicator spinning, but GPG was not using the CPU at all, and no progress was being made as far as I could tell.
This appears to be an issue with the system lacking entropy--but the command line version of gpg provided feedback along these lines, while seahorse didn't. This should be improved.
Created attachment 217588 [details] [review] pgp: Add suggestion to generate entropy while generating key
Thanks for the bug report. Fixed and are now displaying a similar notice to gpg in the progress dialog.