pgp: Add suggestion to generate entropy while generating key

https://bugzilla.gnome.org/show_bug.cgi?id=678680